--- a/phyton/siteEmPython/templates/sobre.html
+++ b/phyton/siteEmPython/templates/sobre.html
@@ -110,6 +110,10 @@
                 <div>
                     <dt class="contato__info-titulo">Pessoa Física</dt> 
                     <dd class="contato__info-descricao"> <a href="tel://114118-2172">(011) 4118-2172 </a></dd>
+
+                    <div>
+                    <dt class="contato__info-titulo">Pessoa Jurídica</dt> 
+                    <dd class="contato__info-descricao"> <a href="tel://114118-2172"> (011) 4118-2172 </a></dd>
                 </div>
             </dl>
         </div>
