--- a/phyton/siteEmPython/templates/index.html
+++ b/phyton/siteEmPython/templates/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MusicDot</title>
     <link rel="icon" href="img/favicon.ico">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300, 400, 500, 600, 700,&display=block">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300, 400, 500, 600, 700, &display=block">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/container.css">
     <link rel="stylesheet" href="css/cabecalho.css">
     <link rel="stylesheet" href="css/cursos.css">
     <link rel="stylesheet" href="css/video.css">
     <link rel="stylesheet" href="css/planos.css">
-    <link rel="stylesheet" href="css/beneficios">
+    <link rel="stylesheet" href="css/beneficios.css">
     <link rel="stylesheet" href="css/chamada-youtube.css">
     <link rel="stylesheet" href="css/chamada-app.css">
     <link rel="stylesheet" href="css/rodape.css">
@@ -21,18 +21,61 @@
 <body>
     <header class="cabecalho container">
         <a href="/">
-            <img class="cabecalho__logo" src="img/musicdot-logo-light.svg" title="Ir para a página inicial da MusicDot" alt="MusicDot">
+            <img class="cabecalho__logo" src="img/musicdot-logo-light.svg" title="Ir para a página inicial da MusicDot" alt="Musicdot">
         </a>
-
         <nav>
             <ul class="cabecalho__menu">
                 <li class="cabecalho__item-menu"><a href="/sobre">Contato</a></li>
                 <li class="cabecalho__item-menu"><a href="#">Entrar</a></li>
                 <li class="cabecalho__item-menu cabecalho__item-menu--matricula"><a href="/matricula">Matricule-se</a></li>
-                
             </ul>
         </nav>
     </header>
-        
+    <main>
+        <section class="cursos">
+            <article class="cursos__chamada --largura-grande">
+                <h1 class="chamada__titulo">Cursos online de <strong class=chamada__titulo--destaque>música</strong></h1>
+                <p>Comece agora e aprenda sua primeira música em 10 minutos!</p>
+                <a href="cursos.html" class="chamada__cursos__matricula  botao">Matricule-se</a>
+            </article>
+            <nav>
+                <ul class="cursos__lista">
+                    <li class="curso--tecladopiano">
+                        <a href="#">Teclado & Piano</a>
+                    </li>
+                    <li class="curso--violaoguitarra">
+                        <a href="#">Violao & Guitarra</a>
+                    </li>
+                    <li class="curso--baixo">
+                        <a href="#">Baixo</a>
+                    </li>
+                    <li class="curso--bateria curso--destaque">
+                        <a href="#">Bateria</a>
+                    </li>
+                    <li class="curso--percussao">
+                        <a href="#">Percussão</a>
+                    </li>
+                    <li class="curso--canto">
+                        <a href="#">Canto</a>
+                    </li>
+                    <li class="curso--audio">
+                        <a href="#">Áudio</a>
+                    </li>
+                    <li class="curso--teoria">
+                        <a href="#">Teoria</a>
+                    </li>
+                    <li class="curso--sopro">
+                        <a href="#">Sopro</a>
+                    </li>
+                    <li class="curso--cordas">
+                        <a href="#">Cordas</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
+        <section class="video">
+            
+        </section>            
+    </main>
 </body>
 </html>
